Christmas Time Counter

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Something</title>
-        <link rel="stylesheet" href="index.css" />
-    </head>
-    <body>
-        <h1 id="title">Control Mouse</h1>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <title>Something</title>
+    <link rel="stylesheet" href="index.css" />
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div class="main-title">
+      <h1 id="title">
+        Time left until christmas</h1>
+    </div>
+    <div class="js-clock">
+        <h2>00:00</h2>
+    </div>
+    <script src="index.js"></script>
+    <script src="clock.js"></script>
+  </body>
 </html>
