--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
   <head>
     <title>Something</title>
     <link rel="stylesheet" href="index.css" />
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
   </head>
   <body>
     <div class="main-title">
-      <h1 id="title">
-        Time left until christmas</h1>
+      <h1 id="title">Time left until christmas</h1>
     </div>
     <div class="js-clock">
-        <h2>00:00</h2>
+      <h2>00:00</h2>
     </div>
+    <form class="js-form form">
+      <input type="text" placeholder="What is your name?" />
+    </form>
+    <h4 class="js-greetings greetings"></h4>
+    <form class="js-toDoForm">
+      <input type="text" placeholder="Write a to do" />
+    </form>
+    <ul class="js-toDoList"></ul>
     <script src="index.js"></script>
+    <script src="gretting.js"></script>
     <script src="clock.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
