--- a/calculator/index.html
+++ b/calculator/index.html
@@ -1,3 +1,44 @@
+<!-- 중첩계산이 안되는 계산기 간단하다. -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="./src/style.css" />
+  </head>
+  <body>
+    <div class="calculator">
+      <input type="text" class="cal-screen" value="" disabled />
+      <div class="cal-keys">
+        <button type="button" class="operator" value="+">+</button>
+        <button type="button" class="operator" value="-">-</button>
+        <button type="button" class="operator" value="*">&times;</button>
+        <button type="button" class="operator" value="/">&divide;</button>
+
+        <button type="button" value="7">7</button>
+        <button type="button" value="8">8</button>
+        <button type="button" value="9">9</button>
+
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+        <button type="button" value="6">6</button>
+
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+
+        <button type="button" value="0">0</button>
+        <button type="button" class="decimal" value=".">.</button>
+        <button type="button" class="clear" value="all-clear">AC</button>
+
+        <button type="button" class="qual-sign operator" value="=">=</button>
+      </div>
+    </div>
+    <script src="./src/index.js"></script>
+  </body>
+</html> -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,26 +48,29 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
-    <div class="cal-container">
-      <div class="cal-display"></div>
-      <div class="cal-keys">
-        <button class="key-operator" data-action="add">+</button>
-        <button class="key-operator" data-action="subtract">-</button>
-        <button class="key-operator" data-action="multiply">&times;</button>
-        <button class="key-operator" data-action="divide">/</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>0</button>
-        <button data-action="decimal">.</button>
-        <button data-action="clear">C</button>
-        <button class="key-equal" data-action="calculate">=</button>
+    <div class="container">
+      <div class="calculator">
+        <div class="cal-display">0</div>
+
+        <div class="cal-keys">
+          <button class="key--operator" data-action="add">+</button>
+          <button class="key--operator" data-action="subtract">-</button>
+          <button class="key--operator" data-action="multiply">&times;</button>
+          <button class="key--operator" data-action="divide">÷</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>0</button>
+          <button data-action="decimal">.</button>
+          <button data-action="clear">AC</button>
+          <button class="key--equal" data-action="calculate">=</button>
+        </div>
       </div>
     </div>
     <script src="./src/index.js"></script>
